# dds-datamodels-umaa

./: .gitignore  CMakeLists.txt  README.md  datamodel.json
datamodel/idl/UMAA/CO/CommsChannel/: CommsChannelMessageConfigType.idl  CommsChannelMessageType.idl  CommsChannelReceiverStatisticsType.idl  CommsChannelSenderStatisticsType.idl
datamodel/idl/UMAA/CO/CommsChannelConfig/: CommsChannelAddMessageCancelConfigCommandStatusType.idl  CommsChannelAddMessageCancelConfigType.idl  CommsChannelAddMessageConfigAckReportType.idl  CommsChannelAddMessageConfigCommandStatusType.idl  CommsChannelAddMessageConfigCommandType.idl  CommsChannelConfigReportType.idl  CommsChannelDeleteMessageCancelConfigCommandStatusType.idl  CommsChannelDeleteMessageCancelConfigType.idl  CommsChannelDeleteMessageConfigAckReportType.idl  CommsChannelDeleteMessageConfigCommandStatusType.idl  CommsChannelDeleteMessageConfigCommandType.idl
datamodel/idl/UMAA/CO/CommsChannelControl/: CommsChannelClearAllCommandAckReportType.idl  CommsChannelClearAllCommandStatusType.idl  CommsChannelClearAllCommandType.idl  CommsChannelClearMessageCommandAckReportType.idl  CommsChannelClearMessageCommandStatusType.idl  CommsChannelClearMessageCommandType.idl  CommsChannelResetCommandAckReportType.idl  CommsChannelResetCommandStatusType.idl  CommsChannelResetCommandType.idl  CommsChannelShutdownCommandAckReportType.idl  CommsChannelShutdownCommandStatusType.idl  CommsChannelShutdownCommandType.idl  CommsChannelStartupCommandAckReportType.idl  CommsChannelStartupCommandStatusType.idl  CommsChannelStartupCommandType.idl
datamodel/idl/UMAA/CO/CommsChannelDataEncodingReport/: CommsChannelDataEncodingReportType.idl
datamodel/idl/UMAA/CO/CommsChannelEnvironmentReport/: CommsChannelEnvironmentReportType.idl
datamodel/idl/UMAA/CO/CommsChannelPowerConfig/: CommsChannelPowerCancelConfigCommandStatusType.idl  CommsChannelPowerCancelConfigType.idl  CommsChannelPowerConfigAckReportType.idl  CommsChannelPowerConfigCommandStatusType.idl  CommsChannelPowerConfigCommandType.idl  CommsChannelPowerConfigReportType.idl
datamodel/idl/UMAA/CO/CommsChannelPowerReport/: CommsChannelPowerReportType.idl
datamodel/idl/UMAA/CO/CommsChannelSpecs/: CommsChannelSpecsReportType.idl  FrequencyRangeType.idl
datamodel/idl/UMAA/CO/CommsChannelStatus/: CommsChannelReceiverReportType.idl  CommsChannelReceiverStatisticsReportType.idl  CommsChannelReportType.idl  CommsChannelSenderReportType.idl  CommsChannelSenderStatisticsReportType.idl
datamodel/idl/UMAA/CO/CommsChannelSystemTimeReport/: CommsChannelSystemTimeReportType.idl
datamodel/idl/UMAA/CO/Filter/: AllFilterType.idl  DecimateStructureFilterType.idl  MessageFilterType.idl  SendOnlyIfChangedFilterType.idl
datamodel/idl/UMAA/CO/MessageFilterConfig/: MessageFilterCancelConfigCommandStatusType.idl  MessageFilterCancelConfigType.idl  MessageFilterConfigAckReportType.idl  MessageFilterConfigCommandStatusType.idl  MessageFilterConfigCommandType.idl
datamodel/idl/UMAA/Common/: IdentifierType.idl  LargeListMetadata.idl  LargeSetMetadata.idl
datamodel/idl/UMAA/Common/Angle/: GammaAnglePropulsorRequirementType.idl  GammaAnglePropulsorToleranceType.idl  PropellerPitchAnglePropulsorRequirementType.idl  PropellerPitchAnglePropulsorToleranceType.idl  RhoAnglePropulsorRequirementType.idl  RhoAnglePropulsorToleranceType.idl
datamodel/idl/UMAA/Common/Distance/: DistanceRequirementType.idl  DistanceToleranceType.idl
datamodel/idl/UMAA/Common/Enumeration/: EnumerationSets.idl
datamodel/idl/UMAA/Common/Environment/: DepthSpeedPairType.idl  PoseType.idl  WorldTransformType.idl
datamodel/idl/UMAA/Common/MaritimeEnumeration/: MaritimeEnumerationSets.idl
datamodel/idl/UMAA/Common/Measurement/: Acceleration3DPlatformXYZ.idl  AltitudeAGLRequirementType.idl  AltitudeAGLRequirementVariantType.idl  AltitudeAGLToleranceType.idl  AltitudeAGLVariantType.idl  AltitudeASFRequirementType.idl  AltitudeASFRequirementVariantType.idl  AltitudeASFToleranceType.idl  AltitudeASFVariantType.idl  AltitudeGeodeticRequirementType.idl  AltitudeGeodeticRequirementVariantType.idl  AltitudeGeodeticToleranceType.idl  AltitudeGeodeticVariantType.idl  AltitudeMSLRequirementType.idl  AltitudeMSLRequirementVariantType.idl  AltitudeMSLToleranceType.idl  AltitudeMSLVariantType.idl  AltitudeRateASFRequirementType.idl  AltitudeRateASFRequirementVariantType.idl  AltitudeRateASFToleranceType.idl  BallastMassType.idl  CovarianceAccelerationPlatformXYZType.idl  CovarianceOrientationAccelerationPlatformXYZType.idl  (+26 more)
resource/annotation_script/: annotation_script.py
(+473 files in other folders)
